@@ -1,13 +1,20 @@
+appmandir =  $(mandir)/man$(APP_MAN_SUFFIX)
+
 # Xserver.man covers options generic to all X servers built in this tree
-MAN_SRCS = Xserver.man.pre
+appman_SOURCES = Xserver.man.pre
 
-man1_MANS = Xserver.man
+appman_PROCESSED = $(appman_SOURCES:man.pre=man)
 
-all-local: $(man1_MANS)
+appman_DATA = $(appman_SOURCES:man.pre=@APP_MAN_SUFFIX@)
 
-CLEANFILES = $(man1_MANS)
+BUILT_SOURCES = $(appman_PROCESSED)
+
+CLEANFILES = $(appman_PROCESSED) $(appman_DATA)
 
 include $(top_srcdir)/cpprules.in
+
+.man.$(APP_MAN_SUFFIX):
+	cp $< $@
 
 EXTRAMANDEFS = -D__default_font_path__="`echo $(COMPILEDDEFAULTFONTPATH) | sed -e 's/,/, /g'`"
 
@@ -15,4 +22,4 @@ EXTRAMANDEFS = -D__default_font_path__="`echo $(COMPILEDDEFAULTFONTPATH) | sed -
 DEVEL_DOCS = smartsched
 
 
-EXTRA_DIST = $(DEVEL_DOCS) $(MAN_SRCS)
+EXTRA_DIST = $(DEVEL_DOCS) $(appman_SOURCES)
