@@ -1,3 +1,8 @@
+2005-11-03  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* doc/Makefile.am: 
+	Use APP_MAN_SUFFIX for Xserver man page instead of hardcoding section 1
+	
 2005-11-02  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
